[package]
name = "influxdb-line-protocol"
version = "1.0.0"
authors = ["InfluxDB IOx Project Developers"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "InfluxDB line protocol parser and builder."
homepage = "https://github.com/influxdata/influxdb_iox/tree/main/influxdb_line_protocol"
repository = "https://github.com/influxdata/influxdb_iox/tree/main/influxdb_line_protocol"

# Note this crate is published as its own crate on crates.io but kept in
# this repository for maintenance convenience.
#
# Thus it is important not to have `path` `[dependencies]` on other workspace crates that aren't
# published.
#
# History: https://github.com/influxdata/influxdb_iox/issues/7051

[dependencies] # In alphabetical order
bytes = "1.10"
log = "0.4.28"
nom = { version = "8", default-features = false, features = ["std"] }
smallvec = { workspace = true }
snafu = "0.8"

# `path` `[dev-dependencies]` are fine
[dev-dependencies] # In alphabetical order
test_helpers = { path = "../test_helpers" }
