[package]
name = "iox_catalog"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
test_helpers = ["dep:pgtemp"]

[dependencies] # In alphabetical order
async-trait = "0.1.83"
backoff = { version = "0.1.0", path = "../backoff" }
base64 = "0.22"
catalog_cache = { path = "../catalog_cache" }
client_util = { path = "../client_util" }
dashmap = "6.1.0"
data_types = { path = "../data_types" }
error_reporting = { path = "../error_reporting" }
futures = "0.3"
generated_types = { path = "../generated_types" }
hashbrown = "0.14"
http = { workspace = true }
iox_time = { version = "0.1.0", path = "../iox_time" }
log = "0.4"
metric = { version = "0.1.0", path = "../metric" }
observability_deps = { path = "../observability_deps" }
parking_lot = { version = "0.12" }
paste = "1.0.15"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
siphasher = "1.0"
snafu = "0.8"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "sqlite"] }
sqlx-hotswap-pool = { path = "../sqlx-hotswap-pool" }
thiserror = "2.0.7"
tokio = { version = "1.42", features = ["io-util", "macros", "parking_lot", "rt-multi-thread", "time"] }
tonic = { workspace = true }
trace = { path = "../trace" }
trace_http = { path = "../trace_http" }
uuid = "1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# for test_helpers feature
pgtemp = { version = "0.5.0", optional = true }

[dev-dependencies] # In alphabetical order
assert_matches = "1.5.0"
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
dotenvy = "0.15.7"
futures-concurrency = "7.6.2"
mutable_batch_lp = { path = "../mutable_batch_lp" }
pgtemp = "0.5.0"
pretty_assertions = "1.4.1"
proptest = { workspace = true }
rand = "0.8"
tempfile = "3"
test_helpers = { path = "../test_helpers" }

[[bench]]
name = "quorum"
harness = false
required-features = ["test_helpers"]
