[package]
name = "iox_http_util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3"
http = { workspace = true }
hyper = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
