[package]
name = "iox_query"
description = "IOx Query Interface and Executor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# This crate is designed to be independent of the rest of the IOx
# server and specific storage systems such as Mutable Buffer and Read Buffer.
#
# The rationale for this is to:
#
# 1. Keep change/compile/link time down during development when working on just this crate
# 2. Allow for query logic testing without bringing in all the storage systems.

[dependencies] # In alphabetical order
arrow = { workspace = true }
arrow_util = { path = "../arrow_util" }
async-trait = "0.1"
bytes = "1.8"
chrono = { version = "0.4", default-features = false }
data_types = { path = "../data_types" }
datafusion = { workspace = true }
datafusion_util = { path = "../datafusion_util" }
executor = { path = "../executor"}
futures = "0.3"
hashbrown = { workspace = true }
indexmap = { version = "2.6", features = ["std"] }
itertools = "0.13.0"
iox_query_params = { path = "../iox_query_params" }
iox_time = { path = "../iox_time" }
meta_data_cache = { path = "../meta_data_cache" }
metric = { path = "../metric" }
object_store = { workspace = true }
observability_deps = { path = "../observability_deps" }
parking_lot = "0.12"
parquet_file = { path = "../parquet_file" }
query_functions = { path = "../query_functions"}
schema = { path = "../schema" }
snafu = "0.8"
tokio = { version = "1.41", features = ["macros", "parking_lot"] }
tokio-stream = "0.1"
trace = { path = "../trace" }
tracker = { path = "../tracker" }
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies] # In alphabetical order
rand = "0.8"
criterion = { version = "0.5", default-features = false, features = ["rayon"]}
insta = { version = "1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
test_helpers = { path = "../test_helpers" }


[[bench]]
name = "deduplicate"
harness = false
