[package]
name = "iox_query_influxrpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = "0.1.83"
datafusion = { workspace = true }
datafusion_util = { path = "../datafusion_util" }
futures = "0.3"
generated_types = { path = "../generated_types" }
hashbrown = { workspace = true }
iox_query = { path = "../iox_query" }
observability_deps = { path = "../observability_deps" }
query_functions = { path = "../query_functions"}
schema = { path = "../schema" }
predicate = { path = "../predicate" }
tokio = { version = "1.42", features = ["macros", "parking_lot"] }
tokio-stream = "0.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies] # In alphabetical order
arrow_util = { path = "../arrow_util" }
test_helpers = { path = "../test_helpers" }
insta = { version = "1", features = ["yaml"] }
