[package]
name = "iox_system_tables"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
async-trait = "0.1.88"
datafusion.workspace = true
futures = "0.3"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
