[package]
name = "ioxd_common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies, in alphabetical order
authz = { path = "../authz", features = ["http"] }
clap_blocks = { path = "../clap_blocks" }
generated_types = { path = "../generated_types" }
metric = { path = "../metric" }
metric_exporters = { path = "../metric_exporters" }
observability_deps = { path = "../observability_deps" }
service_grpc_testing = { path = "../service_grpc_testing" }
tower_trailer = { path = "../tower_trailer" }
trace = { path = "../trace" }
trace_exporters = { path = "../trace_exporters" }
trace_http = { path = "../trace_http" }

# Crates.io dependencies, in alphabetical order
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1.0"
futures = "0.3"
hashbrown = { workspace = true }
http = "0.2.11"
hyper = "0.14"
log = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.0"
snafu = "0.8"
tokio = { version = "1.37", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7.11" }
tonic  = { workspace = true }
tonic-health  = { workspace = true }
tonic-reflection = { workspace = true }
tower = "0.4"
tower-http = { version = "0.4", features = ["catch-panic"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# use nix to set some socket options
[target."cfg(unix)".dependencies.nix]
version = "0.28"
default-features = false
features = ["socket"]

[dev-dependencies]
# Workspace dependencies, in alphabetical order
# Crates.io dependencies, in alphabetical order
