[package]
name = "kube_test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
http = "0.2.9"
hyper = "0.14.27"
kube-core = "0.88.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.113"
serde_yaml = "0.9.32"
tower = "0.4.13"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

