[package]
name = "logfmt"
description = "tracing_subscriber layer for writing out logfmt formatted events"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies] # In alphabetical order
observability_deps = { path = "../observability_deps" }
tracing-subscriber = "0.3"
humantime = "2.2.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies] # In alphabetical order
parking_lot = "0.12"
regex = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
