[package]
name = "mutable_batch"
description = "A mutable arrow RecordBatch"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow = { workspace = true }
arrow_util = { path = "../arrow_util" }
data_types = { path = "../data_types" }
hashbrown = { workspace = true }
iox_time = { path = "../iox_time" }
itertools = "0.13"
proptest = { workspace = true, optional = true }
schema = { path = "../schema" }
snafu = "0.8"


[dev-dependencies]
assert_matches = "1.5.0"
mutable_batch_lp = { path = "../mutable_batch_lp" }
partition = { path = "../partition" }
pretty_assertions = "1.4.1"
proptest = { workspace = true }
rand = "0.9"

[features]
arbitrary = ["proptest"]
