[package]
name = "object_store_mem_cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { version = "0.1.83", default-features = false }
bytes = { version = "1.9.0", default-features = false }
dashmap = "6.1.0"
futures = { version = "0.3.31" }
indexmap = { version = "2.7", features = ["std"] }
iox_time = { path = "../iox_time" }
metric = { path = "../metric" }
object_store.workspace = true
observability_deps = { path = "../observability_deps" }
paste = "1"
tokio = { version = "1.41.0", default-features = false }
tracker = { path = "../tracker" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
futures-concurrency = "7"

[lints]
workspace = true
