[package]
name = "object_store_metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies] # In alphabetical order
async-trait = "0.1.88"
bloom2 = "0.5.1"
bytes = "1.10"
futures = "0.3"
iox_time = { version = "0.1.0", path = "../iox_time" }
metric = { version = "0.1.0", path = "../metric" }
object_store = { workspace = true }
observability_deps = { path = "../observability_deps" }
pin-project = "1.1.10"
tokio = { version = "1.45", features = ["io-util"] }
tracker = { path = "../tracker" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies] # In alphabetical order
futures_test_utils = { path = "../futures_test_utils" }
insta = { version = "1", features = ["yaml"] }
object_store_mem_cache = { path = "../object_store_mem_cache" }
object_store_mock = { version = "0.1", path = "../object_store_mock" }
rust_decimal = "1.37.1"
tempfile = "3.20.0"
test_helpers = { path = "../test_helpers" }
tokio = { version = "1.45", features = ["macros", "io-util"] }
