[package]
name = "object_store_size_hinting"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { workspace = true }
object_store.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true

[dev-dependencies]
chrono = { version = "0.4", default-features = false }
object_store_mock = { version = "0.1", path = "../object_store_mock" }
