[package]
name = "parquet_cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
test-with-server-port = []

[dependencies]
arc-swap = "1.6.0"
async-channel = "2.2.0"
async-trait = "0.1.77"
backoff = { path = "../backoff" }
bytes = "1.5.0"
chrono = "0.4.34"
data_types = { path = "../data_types" }
fnv = "1.0.7"
futures = "0.3.30"
http = "0.2.11"
hyper = { version = "0.14.27", features = ["http2"] }
iox_catalog = { path = "../iox_catalog" }
k8s-openapi = { version = "0.21.1", features = ["schemars", "earliest"] }
kube = { version = "0.88.0", features = ["runtime", "client", "derive"] }
moka = { version = "0.12.5", features = ["future"] }
mpchash = "1.2.3"
notify = "6.1.1"
object_store = { workspace = true }
observability_deps = { path = "../observability_deps" }
parking_lot = "0.12.1"
parquet = { workspace = true }
parquet_file = { path = "../parquet_file" }
pin-project = "1.1.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
schemars = "0.8.16"
schema = { path = "../schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = "1.36.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
tower = "0.4.13"
url = "2.5.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
ahash = "0.8.10"
arrow = { workspace = true }
assert_matches = "1.5.0"
bytes = "1.5.0"
datafusion_util = { path = "../datafusion_util" }
iox_tests = { path = "../iox_tests" }
iox_time = { path = "../iox_time" }
kube_test = { path = "../kube_test" }
lazy_static = "1.4.0"
parquet = { workspace = true }
rand = "0.8.5"
schema = { path = "../schema" }
tempfile = "3.10.1"
tokio-stream = "0.1.14"
uuid = "1.7.0"

